fix(Loading): fix loading content is not centered (#3219)
* fix(Loading): fix loading content is not centered

* chore: update dropdown-menu snap

---------

--- a/src/upload/upload.less
+++ b/src/upload/upload.less
@@ -91,9 +91,11 @@
       display: flex;
       flex-direction: column;
       align-items: center;
+      justify-content: center;
       border-radius: @upload-radius;
       color: @text-color-anti;
       padding: 32rpx 0;
+      box-sizing: border-box;
     }
 
     &-text {
